@@ -61,10 +61,12 @@ static pthread_mutex_t trunk_file_lock;
 static pthread_mutex_t trunk_mem_lock;
 static struct fast_mblock_man free_blocks_man;
 static struct fast_mblock_man tree_nodes_man;
-static AVLTreeInfo tree_info;
+
+static AVLTreeInfo size_tree_info = {NULL, NULL, NULL}; //for block alloc
+static AVLTreeInfo node_tree_info = {NULL, NULL, NULL}; //for unique block nodes
 
 static int trunk_create_next_file(FDFSTrunkFullInfo *pTrunkInfo);
-static int trunk_add_node(FDFSTrunkNode *pNode, const bool bWriteBinLog);
+static int trunk_add_free_block(FDFSTrunkNode *pNode, const bool bWriteBinLog);
 
 static int trunk_restore_node(const FDFSTrunkFullInfo *pTrunkInfo);
 static int trunk_delete_space(const FDFSTrunkFullInfo *pTrunkInfo, \
@@ -90,9 +92,29 @@ static int trunk_mem_binlog_write(const int timestamp, const char op_type, \
 	return trunk_binlog_write(timestamp, op_type, pTrunk);
 }
 
-static int storage_trunk_node_compare(void *p1, void *p2)
+static int storage_trunk_node_compare_size(void *p1, void *p2)
 {
 	return ((FDFSTrunkSlot *)p1)->size - ((FDFSTrunkSlot *)p2)->size;
+}
+
+static int storage_trunk_node_compare_entry(void *p1, void *p2)
+{
+	FDFSTrunkFullInfo *pTrunkInfo1;
+	FDFSTrunkFullInfo *pTrunkInfo2;
+	int result;
+
+	pTrunkInfo1 = (FDFSTrunkFullInfo *)p1;
+	pTrunkInfo2 = (FDFSTrunkFullInfo *)p2;
+
+	result = memcmp(&(pTrunkInfo1->path), &(pTrunkInfo2->path), \
+			sizeof(FDFSTrunkPathInfo));
+	if (result != 0)
+	{
+		return result;
+	}
+
+	return memcmp(&(pTrunkInfo1->file), &(pTrunkInfo2->file), \
+			sizeof(FDFSTrunkFileInfo));
 }
 
 int storage_trunk_init()
@@ -149,8 +171,18 @@ int storage_trunk_init()
 		return result;
 	}
 
-	if ((result=avl_tree_init(&tree_info, NULL, \
-			storage_trunk_node_compare)) != 0)
+	if ((result=avl_tree_init(&size_tree_info, NULL, \
+			storage_trunk_node_compare_size)) != 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"avl_tree_init fail, " \
+			"errno: %d, error info: %s", \
+			__LINE__, result, STRERROR(result));
+		return result;
+	}
+
+	if ((result=avl_tree_init(&node_tree_info, NULL, \
+			storage_trunk_node_compare_entry)) != 0)
 	{
 		logError("file: "__FILE__", line: %d, " \
 			"avl_tree_init fail, " \
@@ -164,11 +196,14 @@ int storage_trunk_init()
 		return result;
 	}
 
-	if_trunk_inited = true;
-	logInfo("tree by space size node count: %d, trunk_total_free_space: " \
-		INT64_PRINTF_FORMAT, avl_tree_count(&tree_info), \
+	logInfo("file: "__FILE__", line: %d, " \
+		"tree by space size node count: %d, free block count: %d, " \
+		"trunk_total_free_space: "INT64_PRINTF_FORMAT, __LINE__, \
+		avl_tree_count(&size_tree_info), \
+		avl_tree_count(&node_tree_info), \
 		g_trunk_total_free_space);
 
+	if_trunk_inited = true;
 	return 0;
 }
 
@@ -189,7 +224,9 @@ int storage_trunk_destroy()
 		result = 0;
 	}
 
-	avl_tree_destroy(&tree_info);
+	avl_tree_destroy(&size_tree_info);
+	avl_tree_destroy(&node_tree_info);
+
 	fast_mblock_destroy(&free_blocks_man);
 	fast_mblock_destroy(&tree_nodes_man);
 	pthread_mutex_destroy(&trunk_file_lock);
@@ -313,7 +350,7 @@ static int storage_trunk_save()
 	callback_args.pCurrent += len;
 
 	pthread_mutex_lock(&trunk_mem_lock);
-	result = avl_tree_walk(&tree_info, tree_walk_callback, &callback_args);
+	result = avl_tree_walk(&size_tree_info, tree_walk_callback, &callback_args);
 
 	len = callback_args.pCurrent - callback_args.buff;
 	if (len > 0 && result == 0)
@@ -538,6 +575,31 @@ static int storage_trunk_restore(const int64_t restore_offset)
 	return result;
 }
 
+int storage_delete_trunk_data_file()
+{
+	char trunk_data_filename[MAX_PATH_SIZE];
+	int result;
+
+	snprintf(trunk_data_filename, sizeof(trunk_data_filename), \
+		"%s/data/%s", g_fdfs_base_path, STORAGE_TRUNK_DATA_FILENAME);
+	if (unlink(trunk_data_filename) == 0)
+	{
+		return 0;
+	}
+
+	result = errno != 0 ? errno : ENOENT;
+	if (result != ENOENT)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"unlink trunk data file: %s fail, " \
+			"errno: %d, error info: %s", \
+			__LINE__, trunk_data_filename, \
+			result, STRERROR(result));
+	}
+
+	return result;
+}
+
 static int storage_trunk_load()
 {
 #define TRUNK_DATA_FIELD_COUNT  6
@@ -556,8 +618,8 @@ static int storage_trunk_load()
 	int bytes;
 	int len;
 
-	sprintf(trunk_data_filename, "%s/data/%s", \
-		g_fdfs_base_path, STORAGE_TRUNK_DATA_FILENAME);
+	snprintf(trunk_data_filename, sizeof(trunk_data_filename), \
+		"%s/data/%s", g_fdfs_base_path, STORAGE_TRUNK_DATA_FILENAME);
 	fd = open(trunk_data_filename, O_RDONLY);
 	if (fd < 0)
 	{
@@ -733,21 +795,30 @@ int trunk_free_space(const FDFSTrunkFullInfo *pTrunkInfo, \
 	pTrunkNode->pMblockNode = pMblockNode;
 	pTrunkNode->trunk.status = FDFS_TRUNK_STATUS_FREE;
 	pTrunkNode->next = NULL;
-	return trunk_add_node(pTrunkNode, bWriteBinLog);
+	return trunk_add_free_block(pTrunkNode, bWriteBinLog);
 }
 
-static int trunk_add_node(FDFSTrunkNode *pNode, const bool bWriteBinLog)
+static int trunk_add_free_block(FDFSTrunkNode *pNode, const bool bWriteBinLog)
 {
 	int result;
 	struct fast_mblock_node *pMblockNode;
 	FDFSTrunkSlot target_slot;
 	FDFSTrunkSlot *chain;
 
+	if (avl_tree_find(&node_tree_info, &(pNode->trunk)) != NULL)
+	{
+		char buff[256];
+		logWarning("file: "__FILE__", line: %d, " \
+			"node already exist, trunk entry: %s", __LINE__, \
+			trunk_info_dump(&(pNode->trunk), buff, sizeof(buff)));
+		return EEXIST;
+	}
+
 	target_slot.size = pNode->trunk.file.size;
 	target_slot.head = NULL;
 
 	pthread_mutex_lock(&trunk_mem_lock);
-	chain = (FDFSTrunkSlot *)avl_tree_find(&tree_info, &target_slot);
+	chain = (FDFSTrunkSlot *)avl_tree_find(&size_tree_info, &target_slot);
 	if (chain == NULL)
 	{
 		pMblockNode = fast_mblock_alloc(&tree_nodes_man);
@@ -769,7 +840,7 @@ static int trunk_add_node(FDFSTrunkNode *pNode, const bool bWriteBinLog)
 		pNode->next = NULL;
 		chain->head = pNode;
 
-		if (avl_tree_insert(&tree_info, chain) != 1)
+		if (avl_tree_insert(&size_tree_info, chain) != 1)
 		{
 			result = errno != 0 ? errno : ENOMEM;
 			logError("file: "__FILE__", line: %d, " \
@@ -798,14 +869,23 @@ static int trunk_add_node(FDFSTrunkNode *pNode, const bool bWriteBinLog)
 		pthread_mutex_unlock(&trunk_file_lock);
 		result = 0;
 	}
+
+	if (avl_tree_insert(&node_tree_info, &(pNode->trunk)) != 1)
+	{
+		result = errno != 0 ? errno : ENOMEM;
+		logError("file: "__FILE__", line: %d, " \
+			"avl_tree_insert fail, " \
+			"errno: %d, error info: %s", \
+			__LINE__, result, STRERROR(result));
+	}
 	pthread_mutex_unlock(&trunk_mem_lock);
 
 	return result;
 }
 
-static void trunk_delete_tree_node(FDFSTrunkSlot *pSlot)
+static void trunk_delete_size_tree_entry(FDFSTrunkSlot *pSlot)
 {
-	if (avl_tree_delete(&tree_info, pSlot) == 1)
+	if (avl_tree_delete(&size_tree_info, pSlot) == 1)
 	{
 		fast_mblock_free(&tree_nodes_man, \
 				pSlot->pMblockNode);
@@ -815,6 +895,18 @@ static void trunk_delete_tree_node(FDFSTrunkSlot *pSlot)
 		logWarning("file: "__FILE__", line: %d, " \
 			"can't delete slot entry, size: %d", \
 			__LINE__, pSlot->size);
+	}
+}
+
+static void trunk_delete_node_tree_entry(FDFSTrunkFullInfo *pTrunkInfo)
+{
+	if (avl_tree_delete(&node_tree_info, pTrunkInfo) != 1)
+	{
+		char buff[256];
+		logWarning("file: "__FILE__", line: %d, " \
+			"can't delete block entry, trunk info: %s", \
+			__LINE__, trunk_info_dump(pTrunkInfo, buff, \
+			sizeof(buff)));
 	}
 }
 
@@ -832,7 +924,7 @@ static int trunk_delete_space(const FDFSTrunkFullInfo *pTrunkInfo, \
 	target_slot.head = NULL;
 
 	pthread_mutex_lock(&trunk_mem_lock);
-	pSlot = (FDFSTrunkSlot *)avl_tree_find(&tree_info, &target_slot);
+	pSlot = (FDFSTrunkSlot *)avl_tree_find(&size_tree_info, &target_slot);
 	if (pSlot == NULL)
 	{
 		pthread_mutex_unlock(&trunk_mem_lock);
@@ -865,13 +957,15 @@ static int trunk_delete_space(const FDFSTrunkFullInfo *pTrunkInfo, \
 		pSlot->head = pCurrent->next;
 		if (pSlot->head == NULL)
 		{
-			trunk_delete_tree_node(pSlot);
+			trunk_delete_size_tree_entry(pSlot);
 		}
 	}
 	else
 	{
 		pPrevious->next = pCurrent->next;
 	}
+
+	trunk_delete_node_tree_entry(&(pCurrent->trunk));
 	pthread_mutex_unlock(&trunk_mem_lock);
 
 	if (bWriteBinLog)
@@ -902,7 +996,7 @@ static int trunk_restore_node(const FDFSTrunkFullInfo *pTrunkInfo)
 	target_slot.head = NULL;
 
 	pthread_mutex_lock(&trunk_mem_lock);
-	pSlot = (FDFSTrunkSlot *)avl_tree_find(&tree_info, &target_slot);
+	pSlot = (FDFSTrunkSlot *)avl_tree_find(&size_tree_info, &target_slot);
 	if (pSlot == NULL)
 	{
 		pthread_mutex_unlock(&trunk_mem_lock);
@@ -968,7 +1062,7 @@ static int trunk_split(FDFSTrunkNode *pNode, const int size)
 	pTrunkNode->trunk.status = FDFS_TRUNK_STATUS_FREE;
 	pTrunkNode->next = NULL;
 
-	result = trunk_add_node(pTrunkNode, true);
+	result = trunk_add_free_block(pTrunkNode, true);
 	if (result != 0)
 	{
 		return result;
@@ -1044,7 +1138,7 @@ int trunk_alloc_space(const int size, FDFSTrunkFullInfo *pResult)
 	pthread_mutex_lock(&trunk_mem_lock);
 	while (1)
 	{
-		pSlot = (FDFSTrunkSlot *)avl_tree_find_ge(&tree_info, \
+		pSlot = (FDFSTrunkSlot *)avl_tree_find_ge(&size_tree_info, \
 						&target_slot);
 		if (pSlot == NULL)
 		{
@@ -1075,13 +1169,15 @@ int trunk_alloc_space(const int size, FDFSTrunkFullInfo *pResult)
 			pSlot->head = pTrunkNode->next;
 			if (pSlot->head == NULL)
 			{
-				trunk_delete_tree_node(pSlot);
+				trunk_delete_size_tree_entry(pSlot);
 			}
 		}
 		else
 		{
 			pPreviousNode->next = pTrunkNode->next;
 		}
+
+		trunk_delete_node_tree_entry(&(pTrunkNode->trunk));
 	}
 	else
 	{
@@ -1101,7 +1197,7 @@ int trunk_alloc_space(const int size, FDFSTrunkFullInfo *pResult)
 	}
 
 	pTrunkNode->trunk.status = FDFS_TRUNK_STATUS_HOLD;
-	result = trunk_add_node(pTrunkNode, true);
+	result = trunk_add_free_block(pTrunkNode, true);
 	if (result == 0)
 	{
 		memcpy(pResult, &(pTrunkNode->trunk), \
@@ -1520,7 +1616,7 @@ int trunk_create_trunk_file_advance(void *args)
 		pTrunkNode = trunk_create_trunk_file(&result);
 		if (pTrunkNode != NULL)
 		{
-			result = trunk_add_node(pTrunkNode, false);
+			result = trunk_add_free_block(pTrunkNode, false);
 			if (result != 0)
 			{
 				break;
