@@ -5,6 +5,7 @@ Version 3.10  2012-07-14
  * bug fixed: return correct group name when g_check_file_duplicate is true
  * bug fixed: php extension call_user_function replace TSRMLS_CC with TSRMLS_DC
  * large tracker re-select trunk server interval
+ * trunk free block check duplicate using avl tree
 
 Version 3.09  2012-07-08
  * make.sh avoid override config files of /etc/fdfs/
